--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -40,10 +40,13 @@
 	        <tbody>
 	          <tr class="table-rows" th:each="item: ${prodList}">
 	            <td class="px-1 image">
+	              <!-- show image.  If filePath is an empty string, show no_image.png -->
 	              <img th:if="*{item.filePath}" th:src="${awsUrl} + ${item.filePath}"
-	                onerror="this.src='https://ims-images-0326.s3.ap-northeast-1.amazonaws.com/images/no_image.png';"
-	                th:alt="${item.name}"/>	              
-	            </td>
+	                th:alt="${item.name}"
+	                onerror="this.src='https://ims-images-0326.s3.ap-northeast-1.amazonaws.com/images/no_image.png';" />
+	              <!-- If filePath is null, show no_image.png -->
+	              <img th:unless="*{item.filePath}" src="https://ims-images-0326.s3.ap-northeast-1.amazonaws.com/images/no_image.png">                            	              
+                </td>
 	            <td class="id-price-format px-1 text-center"><span th:text="${item.id}"></span></td>
 	            <td class="px-1"><span th:text="${item.category}"></span></td>
 	            <td class="px-1"><span th:text="${item.name}"></span></td>
